👷 remove module opens causing warning