@@ -165,8 +165,6 @@
                         <testQuick>${testQuick}</testQuick>
                     </systemPropertyVariables>
                     <argLine>
-                        --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-                        --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
                         -Xmx2g
                     </argLine>
                 </configuration>
